--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ python-dotenv>=1.0.0
 websockets>=11.0.3
 requests>=2.31.0
 elevenlabs>=0.2.24
-pyaudio>=0.2.13
 pydub>=0.25.1
+pyaudio
 python-multipart>=0.0.6
